; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_out-text.c_text_out_banner.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_out-text.c_text_out_banner.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Output = type { i32 }

@.str = private unnamed_addr constant [31 x i8] c"%s %s %u %u.%u.%u.%u %u %s %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"banner\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Output*, i32*, i64, i32, i32, i32, i32, i32, i8*, i32)* @text_out_banner to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @text_out_banner(%struct.Output* %0, i32* %1, i64 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7, i8* %8, i32 %9) #0 {
  %11 = alloca %struct.Output*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i8*, align 8
  %20 = alloca i32, align 4
  %21 = alloca [4096 x i8], align 16
  store %struct.Output* %0, %struct.Output** %11, align 8
  store i32* %1, i32** %12, align 8
  store i64 %2, i64* %13, align 8
  store i32 %3, i32* %14, align 4
  store i32 %4, i32* %15, align 4
  store i32 %5, i32* %16, align 4
  store i32 %6, i32* %17, align 4
  store i32 %7, i32* %18, align 4
  store i8* %8, i8** %19, align 8
  store i32 %9, i32* %20, align 4
  %22 = load %struct.Output*, %struct.Output** %11, align 8
  %23 = ptrtoint %struct.Output* %22 to i32
  %24 = call i32 @UNUSEDPARM(i32 %23)
  %25 = load i32, i32* %18, align 4
  %26 = call i32 @UNUSEDPARM(i32 %25)
  %27 = load i32*, i32** %12, align 8
  %28 = load i32, i32* %15, align 4
  %29 = call i8* @name_from_ip_proto(i32 %28)
  %30 = load i32, i32* %16, align 4
  %31 = load i32, i32* %14, align 4
  %32 = lshr i32 %31, 24
  %33 = and i32 %32, 255
  %34 = load i32, i32* %14, align 4
  %35 = lshr i32 %34, 16
  %36 = and i32 %35, 255
  %37 = load i32, i32* %14, align 4
  %38 = lshr i32 %37, 8
  %39 = and i32 %38, 255
  %40 = load i32, i32* %14, align 4
  %41 = lshr i32 %40, 0
  %42 = and i32 %41, 255
  %43 = load i64, i64* %13, align 8
  %44 = trunc i64 %43 to i32
  %45 = load i32, i32* %17, align 4
  %46 = call i8* @masscan_app_to_string(i32 %45)
  %47 = load i8*, i8** %19, align 8
  %48 = load i32, i32* %20, align 4
  %49 = getelementptr inbounds [4096 x i8], [4096 x i8]* %21, i64 0, i64 0
  %50 = call i8* @normalize_string(i8* %47, i32 %48, i8* %49, i32 4096)
  %51 = call i32 @fprintf(i32* %27, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* %29, i32 %30, i32 %33, i32 %36, i32 %39, i32 %42, i32 %44, i8* %46, i8* %50)
  ret void
}

declare dso_local i32 @UNUSEDPARM(i32) #1

declare dso_local i32 @fprintf(i32*, i8*, i8*, i8*, i32, i32, i32, i32, i32, i32, i8*, i8*) #1

declare dso_local i8* @name_from_ip_proto(i32) #1

declare dso_local i8* @masscan_app_to_string(i32) #1

declare dso_local i8* @normalize_string(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
